opam-version: "2.0"
synopsis: "A generic resto client"
maintainer: "contact@nomadic-labs.com"
authors: ["Nomadic Labs" "Ocamlpro"]
license: "MIT"
homepage: "https://gitlab.com/nomadic-labs/resto"
bug-reports: "https://gitlab.com/nomadic-labs/resto/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.11"}
  "uri" {>= "1.9.0"}
  "resto" {= version}
  "resto-directory" {= version}
  "resto-cohttp" {= version}
  "resto-server" {= version}
  "cohttp" {>= "4.0.0"}
  "cohttp-lwt" {>= "4.0.0" & with-test}
  "cohttp-lwt-unix" {>= "4.0.0" & with-test}
  "ezjsonm" {>= "1.3.0" & with-test}
  "json-data-encoding" {>= "0.9.1" & with-test}
  "json-data-encoding-bson" {>= "0.9.1" & with-test}
  "lwt" {>= "5.5.0" & with-test}
  "conduit-lwt-unix" {>= "4.0.2" & with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://gitlab.com/nomadic-labs/resto"
