opam-version: "2.0"
synopsis: "A minimal OCaml library for type-safe HTTP/JSON RPCs"
maintainer: "contact@nomadic-labs.com"
authors: "Nomadic Labs"
license: "MIT"
homepage: "https://gitlab.com/nomadic-labs/resto"
bug-reports: "https://gitlab.com/nomadic-labs/resto/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.11"}
  "uri" {>= "1.9.0"}
  "resto" {= version}
  "resto-lwt" {= version}
  "resto-acl" {= version}
  "resto-directory" {= version}
  "resto-cohttp" {= version}
  "resto-cohttp-client" {= version}
  "resto-cohttp-server" {= version}
  "resto-self-serving-client" {= version}
  "cohttp-lwt" {>= "1.0.0"}
  "lwt" {>= "3.0.0" & < "6.0.0"}
  "cohttp" {>= "4.0.0" & with-test}
  "cohttp-lwt-unix" {>= "4.0.0" & with-test}
  "ezjsonm" {>= "1.3.0" & with-test}
  "json-data-encoding" {>= "0.9.1" & with-test}
  "json-data-encoding-bson" {>= "0.9.1" & with-test}
  "conduit-lwt-unix" {>= "4.0.2" & with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://gitlab.com/nomadic-labs/resto"
