(executable
 (name ezResto_test)
 (modules ezDirectory ezResto_test ezServices)
 (libraries
  resto
  ezresto
  ezresto-directory
  lwt
  lwt.unix
  json-data-encoding
  uri))

(rule
 (alias runtest_ezresto)
 (action
  (run %{exe:ezResto_test.exe})))

(executable
 (name acl_unit_test)
 (modules acl_unit_test)
 (libraries resto resto-acl)
 (flags
  (:standard -open Resto_acl)))

(rule
 (alias runtest_acl_unit_test)
 (action
  (run %{exe:acl_unit_test.exe})))

(executable
 (name acl_integration_test)
 (modules acl_integration_test)
 (libraries
  lwt
  lwt.unix
  json-data-encoding
  ezjsonm
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  uri
  resto-json
  resto
  resto-cohttp
  resto-lwt
  resto-acl
  resto-directory
  resto-cohttp-server
  resto-cohttp-client))

(rule
 (alias runtest_acl_integration_test)
 (action
  (run %{exe:acl_integration_test.exe})))

(executable
 (name chunked_output_integration_test)
 (modules chunked_output_integration_test)
 (libraries
  lwt
  lwt.unix
  json-data-encoding
  ezjsonm
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  uri
  resto
  resto-json
  resto-cohttp
  resto-directory
  resto-lwt
  resto-acl
  resto-cohttp-server
  resto-cohttp-client))

(rule
 (alias runtest_chunked_output_integration_test)
 (action
  (run %{exe:chunked_output_integration_test.exe})))

(executable
 (name resto_test)
 (modules directory resto_test services)
 (libraries
  resto
  resto-lwt
  resto-directory
  resto-json
  json-data-encoding
  json-data-encoding-bson
  uri
  lwt
  lwt.unix
  ezresto))

(rule
 (alias runtest_resto)
 (action
  (run %{exe:resto_test.exe})))

(executable
 (name self_serving_client_test)
 (modules self_serving_client_test)
 (libraries
  resto
  resto-lwt
  resto-directory
  resto-json
  resto-cohttp-self-serving-client
  resto-cohttp
  resto-cohttp-client
  resto-cohttp-server
  json-data-encoding
  cohttp
  uri
  ezjsonm
  lwt
  lwt.unix))

(rule
 (alias runtest_self_serving_client)
 (action
  (run %{exe:self_serving_client_test.exe})))

(alias
 (name runtest)
 (deps
  (alias runtest_resto)
  (alias runtest_ezresto)
  (alias runtest_acl_unit_test)
  (alias runtest_acl_integration_test)
  (alias runtest_self_serving_client)
  (alias runtest_chunked_output_integration_test)))
